# async-rag-ingestion-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  s3_users.json
k8s/: deploy_infra.sh  ingress.yaml  middleware.yaml  rabbitmq-native.yaml  worker.yaml
k8s/values/: qdrant.yaml  seaweedfs.yaml
src/: config.py  ingestion.py  main.py
tests/: test_local_pipeline.py
