[project]
name = "async-rag-ingestion-platform"
version = "0.1.0"
description = "A scalable, event-driven ingestion engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.22",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "pika>=1.3.2",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
]
